--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                             <li>Social Media Management</li>
                         </ul>
                     </li>
-                    <li class="nav-item">Portfolio</li>
+                    <li class="nav-item">Portfolio <span style="font-size: 10px;">∨</span>
+
+                    </li>
                     <li class="nav-item">Blog</li>
                     <li class="nav-item">Contact Us</li>
                 </ul>
@@ -63,8 +65,7 @@
                     </div>
                     <div class="buttons">
                         <button id="prev" style="display: none;">
-                            << /button>
-                                <button id="next" style="display: none;">></button>
+                        <button id="next" style="display: none;">></button>
                     </div>
                 </div>
                 <ul class="dots">
@@ -199,7 +200,9 @@
             <ul class="infor">
                 <li>About US
                     <ul>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi euismod placerat dui et tincidunt. Sed sollicitudin posuere auctor. Phasellus at ultrices nisl. Integer at leo eros. Ut nec lorem id orci convallis porta. Donec pharetra neque eu velit dictum molestie.
+                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi euismod placerat dui et
+                            tincidunt. Sed sollicitudin posuere auctor. Phasellus at ultrices nisl. Integer at leo eros.
+                            Ut nec lorem id orci convallis porta. Donec pharetra neque eu velit dictum molestie.
                         </li>
                     </ul>
                 </li>
@@ -223,19 +226,34 @@
                 </li>
                 <li>Contact Us
                     <ul>
-                        <li>BisLite Inc.
-                            Always Street 265
-                            OX - 125 - Canada</li>
                         <li>
-                            Phone: 987-6543-210
-                            Fax: 987-6543-210
+                            <span style="display: block;">BisLite Inc.</span>
+                            <span style="display: block;">Always Street 265</span>
+                            <span style="display: block;">OX - 125 - Canada</span>
+                        </li>
+                        <li>
+                            <span style="display: block;">Phone: 987-6543-210</span>
+                            <span style="display: block;">Fax: 987-6543-210</span>
                         </li>
                     </ul>
                 </li>
-                <li>Connect with us</li>
+                <li>Connect with us
+                    <ul class="with-us">
+                        <li><img src="./img/facebook.png" alt=""></li>
+                        <li><img src="./img/dribbble.png" alt=""></li>
+                        <li><img src="./img/pinterest.png" alt=""></li>
+                        <li><img src="./img/linkedin.png" alt=""></li>
+                        <li><img src="./img/share.png" alt=""></li>
+                        <li><img src="./img/skype.png" alt=""></li>
+                    </ul>
+                </li>
             </ul>
-            <div>
-
+            <div class="footer-bottom">
+                <p>© Copyright 2021. All rights reserved. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="logo">
+                    <span class="bold">Bis</span>
+                    <span class="regular">Lite</span>
+                </div>
             </div>
         </footer>
     </div>
