--- a/index.html
+++ b/index.html
@@ -23,22 +23,20 @@
                     </li>
                 </ul>
                 <ul class="nav-menu">
-                    <li class="nav-item">Home</li>
-                    <li class="nav-item">About Us</li>
+                    <li class="nav-item"><a href="#!">Home</a></li>
+                    <li class="nav-item"><a href="#!">About Us</a></li>
                     <li class="nav-item">Services <span style="font-size: 10px;">∨</span>
                         <ul>
-                            <li>Web Design</li>
-                            <li>Wordpress Design</li>
-                            <li>Mobile App Developer</li>
-                            <li>Internet Maketing</li>
-                            <li>Social Media Management</li>
+                            <li><a href="#!">Web Design</a></li>
+                            <li><a href="#!">Wordpress Design</a></li>
+                            <li><a href="#!">Mobile App Developer</a></li>
+                            <li><a href="#!">Internet Marketing</a></li>
+                            <li><a href="#!">Social Media Management</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">Portfolio <span style="font-size: 10px;">∨</span>
-
-                    </li>
-                    <li class="nav-item">Blog</li>
-                    <li class="nav-item">Contact Us</li>
+                    <li class="nav-item"><a href="#!">Portfolio <span style="font-size: 10px;">∨</span></a></li>
+                    <li class="nav-item"><a href="#!">Blog</a></li>
+                    <li class="nav-item"><a href="#!">Contact Us</a></li>                    
                 </ul>
             </nav>
         </header>
