--- a/index.html
+++ b/index.html
@@ -145,8 +145,7 @@
                 </div>
                 <i class="hr-1"></i>
                 <div class="img-list">
-                    <img src="https://images2.thanhnien.vn/528068263637045248/2024/1/25/e093e9cfc9027d6a142358d24d2ee350-65a11ac2af785880-17061562929701875684912.jpg"
-                        alt="">
+                    <img src="./img//Layer1.png" alt="">
                     <img src="./img//Layer2.png" alt="">
                     <img src="./img/Layer3.png" alt="">
                     <img src="./img//Layer4.png" alt="">
